--- a/style.css
+++ b/style.css
@@ -3,22 +3,27 @@
     margin: 0;
     padding: 0;
     zoom:1.02;
-    
 }
-
+/* Variable */
+:root {
+    --background:#F7F7FF;
+    --text: #0C090D;
+    --buttons: #00A8E8;
+    --button2: #007bff;
+  }
 /*Background colors*/
 
 .about-section, .contact-section{
-    background-color:#343a40;
+    background-color: var(--background);
 }
 
 #services, #projects{
-    background-color: #343a40;
+    background-color:  var(--background);
 }
 
 .services-bg{
-    background-color: #343a40;
-    color:#ced4da;
+    background-color:  var(--background);
+    color:var(--text);
 }
 
 /*Background colors end*/
@@ -28,25 +33,27 @@
   .navbar {
     background-color: #1a1a1a;
     padding: 15px 0;
-    
+    box-shadow:  0 7px 7px rgba(0, 0, 0, 0.1); 
 }
 
 .navbar-brand img {
     max-height: 40px; /* Adjust logo height */
+    box-shadow: none;
 }
 
 .navbar-nav .nav-link {
     color: #f0f0f0; /* Light text color */
     margin: 0 15px; /* Spacing between links */
-    transition: color 0.3s, transform 0.2s; /* Smooth transitions */
+    transition: all 0.3s, transform 0.2s; /* Smooth transitions */
 }
 
 .navbar-nav .nav-link:hover {
-    color: #007bff; /* Example hover color */
+    color: var(--text); /* Example hover color */
     transform: translateY(-2px); /* Slight lift on hover */
+    letter-spacing: 1.3px;
 }
 .navbar-nav .nav-link.active{
-    color: #007bff;
+    color: var(--text);
     font-weight: bolder;
 }
 
@@ -61,7 +68,7 @@
 
 .dropdown-item:hover {
     background-color: #333;
-    color: #007bff;
+    color: var(--button2);
 }
 
 /* Responsive Design */
@@ -143,12 +150,13 @@
     top: 70%;
     left: 50%;
     transform: translateX(-50%);
-    padding: 10px 25px;
+    padding: 15px 25px;
     font-size: 1.1rem;
-    background-color: #007bff;
+    background-color: var(--button2);
     color: white;
     border: none;
     border-radius: 30px;
+    transition: all 0.3s ease;
 }
 
 .carousel-item .btn:hover{
@@ -208,22 +216,21 @@
 .tab-container{
     display: flex;
     justify-content: center;
-    padding-bottom: 3px;
 }
 
 .icons{
     margin-right: 5px;
-    filter: invert(80%);    
+      
     box-shadow: none;
   }
 
 .tabs{
-    color: #ffffff;
+    color:  var(--text);
    font-weight: bold;
     justify-content: center; 
     border-radius: 50px;
     padding: 3px;
-    background-color:#212529;  
+    background-color:var(--buttons);  
   }
   
   .tab {
@@ -236,19 +243,19 @@
   
   .tab:hover {
     .icons{
-    filter: invert(100%);
+    
     transition: filter 0.3s ease;
     }
-    background-color: #343A40;
+    background-color:  var(--background);
     border-radius: 50px;
   }
   
   .tab.active {
     .icons{
-      filter: invert(100%);
+     
       transition: filter 0.3s ease;
       }
-    background-color: #343A40;
+    background-color:  var(--background);
     border-radius: 50px; 
   }
 
@@ -268,7 +275,7 @@
     align-items: center;
     max-width: 720px;/*Changes*/
     margin: 0 auto; 
-    background-color: #212529;
+    background-color: var(--buttons);
     padding: 20px;
     border-radius: 7px;
     margin-top: 50px;
@@ -277,6 +284,7 @@
 
 .tab-content h2 {
     margin-bottom: 10px;
+    color: var(--background);
 }
 
 .tab-content p {
@@ -291,7 +299,7 @@
 
 
 .learn-more-button {
-    background-color: #007bff; /* Blue button */
+    background-color: var(--button2); /* Blue button */
     color: white;
     padding: 10px 20px;
     border: none;
@@ -338,7 +346,7 @@
         height: 7px;
       }  
     ::-webkit-scrollbar-track {
-        background: #212529; 
+        background: var(--buttons); 
       } 
     ::-webkit-scrollbar-thumb {
         background: #888; 
@@ -360,49 +368,49 @@
 .service-box {
     text-align: center; /* Center content within box */
     padding: 20px; /* Add padding around content */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow on hover */
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.3); /* Add a subtle shadow on hover */
     margin-bottom: 20px; /* Space between boxes */
     border-radius: 8px; /* Rounded corners */
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
     color: white;
-    background-color: #212529;
+    background-color: var(--buttons);
 }
 
 .service-box:hover{
    
    h3{
-    color: #212529
+    color: var(--buttons)
    }
     margin-bottom: 20px; /* Space between boxes */
     border-radius: 8px; /* Rounded corners */
     transition: transform 0.3s ease, box-shadow 0.3s ease; /* Smooth transitions */
     color: black;
-    background-color: #FCDEBE;
+    background-color: var(--background);
     transform: translateY(-5px); /* Move box up slightly on hover */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add a subtle shadow on hover */
+    box-shadow: none; /* Add a subtle shadow on hover */
 
 }
 
 
 #our-services{
-    color: white;
+    color: var(--text);
     padding-bottom: 20px;
 }
 
 .lead{
-    color: white;
+    color: var(--text);
 }
 
 .service-box i {
     font-size: 3rem; /* Adjust icon size */
     margin-bottom: 15px; /* Space between icon and heading */
-    color: #007bff; /* Example icon color */
+    color: var(--button2); /* Example icon color */
     
 }
 
 .service-box h3 {
     margin-bottom: 10px; /* Space between heading and paragraph */
-    
+    color: var(--background);
 }
 
 .service-box p {
@@ -415,14 +423,15 @@
 
 
 
-.btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+.btn-light {
+    transition: all 0.3s ease;
 }
 
-.btn-primary:hover {
-    background-color: #0069d9;
-    border-color: #0062cc;
+.btn-light:hover {
+    background-color: var(--button2);
+    color: var(--background);
+    transform: translateY(-5px);
+    transform: scale(1.1);
 }
 
 /* services end*/
@@ -440,50 +449,47 @@
 
 #projects h2 {
     margin-bottom: 20px;
-    color: white; /* Darker heading color */
+    color: var(--text);
 }
 
 /* Tabs Styles */
 .project-tabs {
-    color: #ffffff;
+    color:  var(--text);
     font-weight:bold;
     justify-content: center; 
     border-radius: 50px;
     padding: 3px;
-    background-color:#212529;
+    background-color:var(--buttons);
 }
 
 .project-tab {
-    
     display: inline-flex;
     align-items: center; /* Vertically center icon and text */
     padding: 10px;
     cursor: pointer;  
     transition: transform .15s;
+    min-width: 110px;
+    justify-content: center;
 }
 
 .project-tab-container{
     display: flex;
     justify-content: center;
-    padding-bottom: 3px;
 }
 
 .project-tab:hover{
-    .icons{
-        filter: invert(100%);
+    .icons{  
         transition: filter 0.3s ease;
         }
-        background-color: #343A40;
+        background-color:  var(--background);
         border-radius: 50px;
-
 }
 
 .project-tab.active {
     .icons{
-        filter: invert(100%);
         transition: filter 0.3s ease;
         }
-      background-color: #343A40;
+      background-color:  var(--background);
       border-radius: 50px; 
     
 }
@@ -533,39 +539,45 @@
 .overlay h3 {
     margin-bottom: 10px;
     background-color: transparent;
+    color:var(--background);
 }
 
 .overlay a {
-    background-color: #007bff;
+    background-color: var(--button2);
     color: white;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: all 0.3s ease;
 }
 
 .overlay a:hover {
     background-color: #0056b3;
+    transform: translateY(-5px);
+    transform: scale(1.1);
 }
 
 /* Responsive Design */
-@media (max-width:449px) {
+@media (max-width:528px) {
     .project-tab-container{
         overflow-x: scroll;
         display: flex;
         justify-content: flex-start;
     }
     .project-tabs {
-        min-width: 395px;
+        min-width: 470px;
     }
     ::-webkit-scrollbar {
         width: 10px;
         height: 7px;
       }
+      .project-tab {
+        min-width:none;
+    }
       
       
     ::-webkit-scrollbar-track {
-        background: #212529; 
+        background: var(--buttons); 
       }
       
     ::-webkit-scrollbar-thumb {
@@ -578,9 +590,10 @@
 }
 
  /* Default Grid (for larger screens) */
+
 .project-grid {
     max-width: 1200px;
-    background-color:#212529; 
+    background-color:var(--buttons); 
     padding: 30px;
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* 3 columns */
@@ -610,11 +623,9 @@
 /* Contact Us*/
 
 .contact-section h2{
-   color:white;
+   color: var(--text);
    text-align: center;
-   margin-bottom: 50px;
-  
-    
+   margin-bottom: 50px;   
 }
 
 
@@ -648,30 +659,34 @@
 }
 
 .form-label {
-    color: #ced4da;
+    color: var(--text);
 }
 
 .form-control {
-    background-color: #282828;
-    border-color: #343a40;
-    color: #f8f9fa;
+    /* background-color: #282828; */
+    border-color:  var(--background);
+    color:  var(--text);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .form-control:focus {
-    background-color: #282828;
-    border-color: #007bff;
+    /* background-color: #282828; */
+    border-color: var(--button2);
     box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-    color: white;
+    color: var(--text);
 }
 
 .btn-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: var(--button2);
+    border-color: var(--button2);
+    transition: all 0.3s ease;
 }
 
 .btn-primary:hover {
     background-color: #0069d9;
     border-color: #0062cc;
+    transform: translateY(-5px);
+    transform: scale(1.1);
 }
 
 /* Responsive Design */
@@ -696,7 +711,7 @@
 h1,
 h2,
 h3 {
-    color: #ffffff; /* Brighter headings */
+    color:  var(--text); /* Brighter headings */
 }
 
 img {
@@ -737,7 +752,7 @@ img {
 h1,
 h2,
 h3 {
-    color: #ffffff; /* Brighter headings */
+    color:  var(--text); /* Brighter headings */
 }
 
 img {
@@ -778,7 +793,7 @@ img {
 h1,
 h2,
 h3 {
-    color: #ffffff; /* Brighter headings */
+    color:  var(--text); /* Brighter headings */
 }
 
 img {
@@ -814,7 +829,7 @@ img {
 
 
 footer {
-    background-color: #212529; /* Dark background */
+    background-color: var(--buttons); /* Dark background */
     color: #fff; /* Light text */
     padding: 20px 0; /* Padding top and bottom */
 }
@@ -832,7 +847,7 @@ footer {
 }
 
 .footer-section h4 {
-    color: #007bff; /* Example heading color */
+    color: var(--text); /* Example heading color */
     margin-bottom: 10px;
 }
 
@@ -849,7 +864,7 @@ footer {
 }
 
 .footer-bottom a {
-    color: #007bff; /* Example link color */
+    color: var(--text); /* Example link color */
     text-decoration: none;
 }
 
@@ -863,7 +878,7 @@ footer {
 }
 
 .social-icons a:hover {
-    color: #007bff; /* Example hover color */
+    color: var(--text); /* Example hover color */
 }
 
 /* Responsive Design */
@@ -883,7 +898,7 @@ footer {
 
 .project-body {
     text-align: center;
-    background-color: #212529;
+    background-color: var(--buttons);
 }
 
 .project-video{
